<resources>
    <string name="app_name">ALIAS</string>
    <string name="game">Alias</string>
    <string name="rules">Pravila</string>
    <string name="teams">Timovi</string>
    <string name="rulesString">Cilj igre je pogoditi što više riječi koje ti partner objašnjava,
        pri tome ne koristeći korijen riječi ili nedozovoljene riječi koje su navedene na dnu ekrana.
        Svaka pogođena riječ nosi +1 bod a svaka nepogođena nosi -1 bod. Također korištenje nedozvoljenih
        riječi ili korijena riječi rezultira -1 bodom. Partija se igra 4 kruga na način da u prvom krugu objašnjava
        prva osoba svih timova, u drugom krugu druga osoba i onda još jednom ponovite ta dva kruga. Pobjeđuje
        tim s najviše ukupnih bodova. Ako bude neriješeno, svi ponavljate još jednu rundu. Vrijeme
        koje ti i partner imate za objašnjavanje iznosi 60 sekundi! SRETNO!
    </string>
    <string name="addTeam">Dodaj</string>
    <string name="startGame">Igraj</string>
    <string name="teamname">Naziv tima</string>
    <string name="firstPlayer">Prvi igrač</string>
    <string name="secondPlayer">Drugi igrač</string>
    <string name="createTeam">OK</string>
    <string name="cancel">Odustani</string>
    <string name="pogodi">&#x2713;</string>
    <string name="preskoci">&#x2717;</string>
    <string name="score_txt">Bodovi: </string>
    <string name="deleteTeams">Izbriši zadnji tim</string>
    <string name="pause">PAUZA</string>
    <string name="resume">KRENI</string>
    <string name="timerMsg">Klikni za početak odbrojavanja.</string>
    <string name="go">KRENI</string>
    <string name="winnerTitle">(: POBJEDNIK :)</string>
    <string name="winner">Pobjednik jeeeee:  </string>
    <string name="congrats">ČESTITKE!</string>
    <string name="againOrNot">Želite li ponovno igrati u istom sastavu?</string>
    <string name="lastLap">Ide zadnji i odlučujući krug zbog izjednačenja, dajte najbolje od sebe :D</string>
</resources>
