<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:isScrollContainer="true"
    tools:context="com.example.josipa.alias.CreateTeamsActivity">

    <EditText
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/teamname" />
    <EditText
        android:id="@+id/first_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/team_name"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/firstPlayer"/>
    <EditText
        android:id="@+id/second_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/first_player"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/secondPlayer" />

    <TextView
        android:id="@+id/show_teams_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        app:layout_constraintTop_toBottomOf="@+id/second_player"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:textStyle="italic|bold"/>

    <Button
        android:id="@+id/add_team_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/show_teams_list"
        android:layout_margin="10dp"
        android:shadowRadius="5"
        android:background="@color/colorAccent"
        android:text="@string/addTeam"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:onClick="showAddedTeam"/>

    <Button
        android:id="@+id/delete_teams_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/show_teams_list"
        app:layout_constraintLeft_toRightOf="@+id/add_team_button"
        android:layout_margin="10dp"
        android:shadowRadius="5"
        android:background="@color/colorAccent"
        android:text="@string/deleteTeams"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:onClick="deleteTeams"/>

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/show_teams_list"
        app:layout_constraintLeft_toRightOf="@+id/delete_teams_button"
        android:layout_margin="10dp"
        android:shadowRadius="5"
        android:background="@color/colorAccent"
        android:text="@string/startGame"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:onClick="startGame"/>



</android.support.constraint.ConstraintLayout>
