<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.josipa.alias.MainActivity">

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        android:textStyle="italic|bold"/>

    <View
        android:id="@+id/line_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/game_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@color/colorAccent">
    </View>

    <Button
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/line_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:shadowRadius="5"
        android:onClick="showRules"
        android:background="@color/colorAccent"
        android:text="@string/rules"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <Button
        android:id="@+id/teams_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rules_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:shadowRadius="5"
        android:background="@color/colorAccent"
        android:text="@string/teams"
        android:onClick="addTeams"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <View
        android:id="@+id/line_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/teams_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent">
    </View>



</android.support.constraint.ConstraintLayout>